# Intraday-Volatility-Monitor

./: .gitattributes  .gitignore  CODEOWNERS  README.md  SPY_DATA_V2full.csv  data_log.csv  high_risk.csv  high_risk_regimes.csv  pyproject.toml
data/: README.md  baseline_monitor.py  fetch_and_store.py  fetch_clean_story_spy.py  fetch_spy_data.py  fetch_spy_datadb.py  retrieve_and_store.py
data/config/: info.yaml
data/samples/: prices.csv
experiments/: emperiments.md  run.py
experiments/configs/: cusum_baseline.yaml
infra/: infra.md
infra/env/: requirements.txt
infra/github/workflows/: ci.yml
paper/: draft.md
research/: README.md  SPY_VOL.csv  Testing.ipynb  VIX_data.ipynb  Vol data.ipynb  test_prices.csv  validation_cases.md
src/ivtool/: README.md  __init__.py
src/ivtool/detectors/: __init__.py  base.py  bocpe.py  cusum.py  factory.py  page_hinkley.py
src/ivtool/pipeline/: __init__.py  io.py  main_factory.py
tests/: README.md  test_bocpe.py  test_cusum.py  test_page_hinkley.py
